<resources>
    <string name="app_name">WanAndroid</string>
    <string name="app_name_cn">玩安卓</string>

    <string name="title">标题</string>
    <string name="take_photo">拍照</string>
    <string name="my_album">我的相册</string>
    <string name="loading">加载中...</string>
    <string name="loading_hint">拼命加载中</string>

    <string name="no_know_exception">未知异常</string>
    <string name="network_exception">网络异常</string>
    <string name="home">首页</string>
    <string name="project">项目</string>
    <string name="gongzhonghao">公众号</string>
    <string name="system">体系</string>
    <string name="my">我的</string>
    <string name="settings">设置</string>
    <string name="title_long">设置拼命加载中拼命加载中拼命加载中</string>
    <string name="login">登录</string>

</resources>