<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black_f5f5f5">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow_FF9B52"
        android:layout_marginBottom="@dimen/m65"
        />

<!--    <ImageView-->
<!--        android:layout_width="@dimen/m60"-->
<!--        android:layout_height="@dimen/m60"-->
<!--        android:src="@drawable/search_white"-->
<!--        android:scaleType="center"-->
<!--        android:background="@color/red"-->
<!--        android:layout_gravity="bottom"-->
<!--        android:layout_marginBottom="@dimen/m80"/>-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/search_white"
        android:layout_gravity="bottom|end"
        app:backgroundTint="@color/blue_0063ff"
        app:rippleColor="@color/red"
        app:fabSize="normal"
        android:layout_marginBottom="@dimen/m80"
        android:layout_marginEnd="@dimen/m10"
        app:layout_behavior=".md.behavior.ScaleDownShowBehavior"/>
<!--    底部切换部分-->
    <View
        android:id="@+id/vBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:alpha="0"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/selector_bg_bottom_home"
        app:behavior_hideable="false"
        app:behavior_peekHeight="@dimen/m65"
        app:layout_behavior="@string/bottom_sheet_behavior">
<!--        要显示的导航部分-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/m65"
            android:orientation="vertical">

            <com.allen.library.shape.ShapeTextView
                android:id="@+id/stvShap"
                android:layout_width="@dimen/m20"
                android:layout_height="@dimen/m4"
                app:shapeSolidColor="@color/black_e6e6e6"
                app:shapeCornersRadius="@dimen/m10"
                android:layout_marginVertical="@dimen/m7"
                android:layout_gravity="center_horizontal"
                />
            <LinearLayout
                android:id="@+id/llNavigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/tvHome"
                    android:layout_width="@dimen/m0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home"
                    android:textSize="@dimen/m10"
                    android:textColor="@color/tv_black_blue"
                    android:gravity="center"
                    android:enabled="false"
                    app:drawableTopCompat="@drawable/home"
                    app:drawableTint="@color/tv_black_blue" />

                <TextView
                    android:id="@+id/tvProject"
                    android:layout_width="@dimen/m0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/project"
                    android:textSize="@dimen/m10"
                    android:textColor="@color/tv_black_blue"
                    android:gravity="center"
                    app:drawableTopCompat="@drawable/project"
                    app:drawableTint="@color/tv_black_blue" />

                <TextView
                    android:id="@+id/tvGzh"
                    android:layout_width="@dimen/m0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gongzhonghao"
                    android:textSize="@dimen/m10"
                    android:textColor="@color/tv_black_blue"
                    android:gravity="center"
                    app:drawableTopCompat="@drawable/gzh"
                    app:drawableTint="@color/tv_black_blue" />

                <TextView
                    android:id="@+id/tvSystem"
                    android:layout_width="@dimen/m0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/system"
                    android:textSize="@dimen/m10"
                    android:textColor="@color/tv_black_blue"
                    android:gravity="center"
                    app:drawableTopCompat="@drawable/knowledge"
                    app:drawableTint="@color/tv_black_blue" />

                <TextView
                    android:id="@+id/tvMy"
                    android:layout_width="@dimen/m0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/my"
                    android:textSize="@dimen/m10"
                    android:textColor="@color/tv_black_blue"
                    android:gravity="center"
                    app:drawableTopCompat="@drawable/my"
                    app:drawableTint="@color/tv_black_blue" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/m1"
            android:layout_marginHorizontal="@dimen/m20"
            android:background="@color/black_e6e6e6"
            android:layout_marginTop="@dimen/m8"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>